--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
   <title>RLT_svr</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <style>
-    #map {
-      height: 100vh;
-      width: 100%;
-    }
-  </style>
+  <style rel="style" href="main.css"></style>
 </head>
 <body>
-  <div id="map"></div>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="send_location.js"></script>
+  <h1>サンプルページ</h1>
+
 </body>
 </html>
